--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Save the Eggs!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=BenchNine|Dokdo" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 
 </head>
 
 <body onload="startGame()">
     <header>
-        <h1>Save the Eggs!</h1>
+        <h1>SavE ThE EgGs!</h1>
     </header>
     <main >
         <!-- onload ="init" -->
