added starting menu, and styles

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Save the Eggs!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=BenchNine|Dokdo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=BenchNine|Dokdo|Mali" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 
 </head>
 
-<body onload="startGame()">
+<body>
     <header>
         <h1>SavE ThE EgGs!</h1>
     </header>
