--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     
         </div> -->
         <script src="script.js"></script>
+        <script src="script2.js"></script>
     </main>
 </body>
 
